force-app/main/default/objects/Account/fields/check__c.field-meta.xml
<CustomField>
    <fullName>check__c</fullName>
    <formula>Phone   +&apos; &apos;+ Sic</formula>
    <label>check</label>
    <type>Text</type>
</CustomField>