force-app/main/default/objects/Account/fields/No_of_Oppurtunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Oppurtunities__c</fullName>
    <label>No_of_Oppurtunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>