force-app/main/default/objects/Account/fields/NumberOfContact__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContact__c</fullName>
    <label>NumberOfContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>