force-app/main/default/objects/Account/fields/Search__c.field-meta.xml
<CustomField>
    <fullName>Search__c</fullName>
    <description>Search Data</description>
    <formula>HYPERLINK(&quot;https://www.google.com/search?q=&quot;&amp; Name,Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search</label>
    <type>Text</type>
</CustomField>