force-app/main/default/objects/Account/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <length>2</length>
    <type>Text</type>
</CustomField>