force-app/main/default/objects/Account/validationRules/Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue   &lt;  0</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue should not be less than 0</errorMessage>
</ValidationRule>