force-app/main/default/objects/Account/validationRules/AnnualRevenue_for_Banking.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualRevenue_for_Banking</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISPICKVAL(Industry,&quot;Banking&quot;) ,AnnualRevenue &lt;=0,NULL)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>AnnualRevenue should not be null for Industry Banking</errorMessage>
</ValidationRule>