force-app/main/default/objects/Account/validationRules/check_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>check_profile</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.Account__c.Checked__c  = false</errorConditionFormula>
    <errorMessage>not admin profile</errorMessage>
</ValidationRule>