force-app/main/default/objects/Account/validationRules/check_profilephone.validationRule-meta.xml
<ValidationRule>
    <fullName>check_profilephone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.FInCSVHeader__c.skipvalidationrule__c , ISBLANK(Phone))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>insert phone number</errorMessage>
</ValidationRule>