force-app/main/default/objects/Account/validationRules/val.validationRule-meta.xml
<ValidationRule>
    <fullName>val</fullName>
    <active>false</active>
    <errorConditionFormula>Sic  = &apos;6576&apos;</errorConditionFormula>
    <errorMessage>check error</errorMessage>
</ValidationRule>